--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,17 @@
 # Site settings
-title: Mauricio Urraco
-description: Jekyll Theme Minimal Resume
+title: Suela Palushi
+description: Available For Hire!
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Mauricio Urraco
-user_description: I'm a Software Engineer from Argentina, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in world of Giving Circles working with Grapevine, a California based startup trying to improve the world through collaborative giving. I'm the first engineer they hired to work on the platform.
-user_title: Software Engineer
-email: mauriurraco@gmail.com
-# twitter_username: lorem_ipsum
-instagram_username: mauriciourraco7
-facebook_username: mauricio.urraco
-linkedin_username: murraco
-github_username:  murraco
+username: Suela Palushi
+user_description: I'm a Product Manager with 5+ years of hands-on experience leading successful teams and digital initiatives, enthusiastically seeking my next challenge with the fearless mindset that no task is too scary nor too difficult!
+user_title: Product Manager
+email: suela@spalushi.com
+twitter_username: SuelaPalushi
+linkedin_username: suela-palushi
+github_username: SuelaP
 # medium_username: lorem_ipsum
 # medium_url: lorem_ipsum.medium.com
 # gplus_username:  lorem_ipsum
